--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
 </body>
 
 </html>
