--- a/index.html
+++ b/index.html
@@ -9,8 +9,27 @@
 </head>
 
 <body>
-  <div id="app"></div>
+  <div class="flex flex-col min-h-screen" id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
 
 </html>
+<style>
+  *::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 30px;
+    background-color: #209393;
+  }
+
+  *::-webkit-scrollbar {
+    width: 8px;
+    border-radius: 6px;
+    background-color: #209393
+  }
+
+  *::-webkit-scrollbar-thumb {
+    border-radius: 6px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: #0E6060;
+  }
+</style>
