--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="/icon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Historium</title>
 </head>
 
 <body>
-  <div class="flex flex-col min-h-screen" id="app"></div>
+  <div class="flex flex-col min-h-screen background" id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
 
